<resources>
    <string name="more_than_99">99+</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="username_cannot_empty">用户名不能为空</string>
    <string name="password_cannot_empty">密码不能为空</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="about_sc">关于随车</string>
    <string name="app_name">车轮滚滚随车</string>
    <string name="complete">完成</string>
    <string name="waybill_amount">运单金额:</string>
    <string name="next_step">下一步</string>
    <string name="first_tel">电话</string>
    <string name="first_map">导航</string>
    <string name="expend">支出</string>
    <string name="income">收入</string>
    <string name="my_tally_book">我的记账本</string>
    <string name="month_income">本月累计收入(元)</string>
    <string name="month_spending">本月累计支出(元)</string>
    <string name="remember_a">+记一笔</string>
    <string name="shou">收:</string>
    <string name="rmb">￥</string>
    <string name="fa">发:</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="cancel_interval">取 消</string>
    <string name="today">今天</string>
    <string name="ton">吨</string>

    <string name="accom_car">随车</string>
    <string name="accom_car_mile">里程</string>
    <string name="accom_car_con">油耗</string>
    <string name="accom_car_pathway">途径</string>

    <string name="notebook_detail">支出明细</string>
    <string name="str_income">收入明细</string>
    <string name="str_income_tip">本月累计总收入（元）</string>
    <string name="str_expend_tip">本月累计总支出（元）</string>
    <string name="zero_dot_zerozero">0.00</string>
    <string name="resetpassword">请输入新密码</string>
    <string name="modify_password">修改密码</string>
    <string name="succ_add_truck">添加车辆成功</string>
    <string name="err_add_truck"> 添加车辆失败</string>
    <string name="truck_add_truck">车辆发布</string>
    <string name="truck_add_truck_num">车牌号</string>
    <string name="truck_add_truck_fream_num">车架号</string>
    <string name="truck_add_truck_hint_0">请输入有效车牌号</string>
    <string name="truck_add_truck_fream_hint_0">请输入车架号的后八位</string>
    <string name="truck_add_truck_type">车辆类型</string>
    <string name="truck_add_truck_hint_1">请选择车辆类型</string>
    <string name="truck_add_truck_length">车长</string>
    <string name="truck_add_truck_hint_2">请选择车辆长度</string>
    <string name="truck_add_truck_weight">载重</string>
    <string name="truck_add_truck_hint_3">请输入车辆载重</string>
    <string name="truck_add_truck_hint_7">请输入车架号</string>
    <string name="truck_push_my_truck">发布我的车辆</string>
    <string name="custom_service">联系客服</string>
    <string name="login">登录</string>
    <string name="vehicle_monitoring">车辆监控</string>
    <string name="my_motorcade">我的车辆</string>
    <string name="driving_score">驾驶评分</string>
    <string name="driving_remind">驾驶提醒</string>
    <string name="maintenance">维修保养</string>
    <string name="logistics_park">物流园</string>
    <string name="financial_services">金融服务</string>
    <string name="truck_aftermarket">卡车后市场</string>
    <string name="financial_aftermarket">金融、后市场产品</string>
    <string name="please_enter_your_account_number">请输入您的账号</string>
    <string name="please_enter_your_phone_number">请输入您的手机号</string>
    <string name="phone_number_is_account">手机号将成为你的账号</string>
    <string name="enter_received_verification_code">输入你收到的验证码</string>
    <string name="please_set_your_password">请设置您的密码</string>
    <string name="register_succeed_hint">恭喜您已经成功注册成为随车App的司机\n现在就是使用随车APP！</string>
    <string name="click_next_step_hint">点击"下一步",即表示你同意《%1$s》</string>
    <string name="service_agreement">服务协议</string>
    <string name="enter_your_password">请输入您的密码</string>
    <string name="news">新闻公告</string>
    <string name="oils">油品</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_10">10</string>
    <string name="number_20">20</string>
    <string name="network_anomaly">网络异常，请稍后再试</string>
    <string name="about_us">    随车APP让您远程了解车辆运营情况，知晓车辆机械性能、安全性能，掌握驾驶行为、当前位置和行驶轨迹、并对运单进行提货签收操作，也可通过平台定位到就近心仪的全国服务网点随时随地获取服务。</string>
    <string name="truck_manage">车辆管理</string>
    <string name="transport_manage">运输管理</string>
    <string name="user_setttings">用户设置</string>
    <string name="default_text">- -</string>
    <string name="no_more">没有更多啦</string>
    <string name="load_more">加载更多</string>
    <string name="fuel_gas">加油加气</string>
    <string name="placeholders_two">%1$s%2$s</string>
    <string name="now_no">暂无</string>暂无电话号码
    <string name="now_no_phone_number">暂无电话号码</string>
    <string name="connection_person">联系人:&#160;</string>
    <string name="make_call">拨打电话</string>
    <string name="go_here">去这里</string>
    <string name="business_info">商户信息</string>
    <string name="on_the_day">上一天</string>
    <string name="next_day">下一天</string>
    <string name="detail">详细</string>
    <string name="locus_free">轨迹地图</string>
    <string name="on_the_month">上一月</string>
    <string name="next_month">下一月</string>
    <string name="monthly_statement">月报表</string>
    <string name="this_month_mileage">本月里程</string>
    <string name="km">公里</string>
    <string name="hour">小时</string>
    <string name="used_time">用时</string>
    <string name="used_time_colon">用时 ：</string>
    <string name="idle_speed_ratio">怠速比</string>
    <string name="idle_speed_ratio_colon">怠速比 ：</string>
    <string name="percent">%</string>
    <string name="the">第</string>
    <string name="one">1</string>
    <string name="waybill_detail">运单详情</string>
    <string name="litre">升</string>
    <string name="driver">司机</string>
    <string name="fuel_consumption_today">今日耗油量</string>
    <string name="litres_per_hundred_km">升/百公里</string>
    <string name="hundred_km_fuel_consumption">百公里油耗</string>
    <string name="miles">里程</string>
    <string name="fuel_consumption">油耗</string>
    <string name="historical_route">历史轨迹</string>
    <string name="tyre">轮胎</string>
    <string name="truck_leasing">卡车租赁</string>
    <string name="etc">ETC</string>
    <string name="coming_soon">即将上线</string>
    <string name="fuel_card">加油卡</string>
    <string name="truck_parts">卡车配件</string>
    <string name="please_input_plate_numbers">请输入车牌号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="ok">好的</string>
    <string name="click_pick_up_goods">点击\n提货</string>
    <string name="not_pick_up_goods">未提货</string>
    <string name="not_sign_for">未签收</string>
    <string name="click_sign_for">点击\n签收</string>
    <string name="sign_for">签收</string>
    <string name="pick_up_goods">提货</string>
    <string name="wait_pick_up_goods">待提货</string>
    <string name="wait_sign_for">待签收</string>
    <string name="all">全部</string>
    <string name="loading">加载中...</string>
    <string name="all_truck">全部车辆</string>
    <string name="on_the_road">行驶中</string>
    <string name="in_the_static">静止中</string>
    <string name="motionless">静止</string>
    <string name="disconnect">断开连接</string>
    <string name="interrupt">断开</string>
    <string name="return_map_mode">返回地图模式</string>
    <string name="insurance_installment">保险分期付款</string>
    <string name="payment_of_freight">运费垫付</string>
    <string name="sum">+</string>
    <string name="in">in</string>
    <string name="out">out</string>
    <string name="hao_minus">号-</string>
    <string name="minus">-</string>
    <string name="etc_road_bridge_fee_payment">ETC路桥费垫付</string>
    <string name="select_the_vehicle">选择车辆</string>
    <string name="final_positioning_time">最后定位时间：</string>
    <string name="two_hundred">200</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="will_you_unbind_the_bank_card">是否解除绑定该银行卡？</string>
    Confirm adding the car to your vehicle list?
    <string name="hint_add_vehicle">确认添加该车到您的车辆列表?</string>
    <string name="neutral_taxiing">空挡滑行</string>
    <string name="resetpassword2">请再次输入新密码</string>
    <string name="maintenance_service_point">维修保养服务点</string>
    <string name="refueling_stations">加油加气站</string>
    <string name="logistics_zone">物流园区</string>
    <string name="remote_diagnosis">远程诊断</string>
    <string name="software_update">软件更新</string>
    <string name="change_password">密码修改</string>
    <string name="new_user_register">新用户注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="switch_account">切换账号</string>
    <string name="logout">注销</string>
    <string name="year">年</string>
    <string name="week">周</string>
    <string name="driving_traffic">行驶中车辆</string>

    <string name="select_car">选择车</string>
    <string name="colon">：</string>
    <string name="without">无</string>
    <string name="tally_book">记账本</string>

</resources>