<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             style="@style/width_m_height_m"
                                             android:background="@color/bg_app">

    <include
        android:id="@+id/head"
        layout="@layout/view_titlebar"/>

    <TextView
        android:id="@+id/tv_truck_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical|end"
        android:text="@string/truck_add_truck_num"
        android:textColor="@color/black_333"
        android:padding="10dp"
        android:textSize="@dimen/txt40"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintRight_toLeftOf="@+id/et_truck_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/head"/>

    <EditText
        android:id="@+id/et_truck_number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:digits="京津冀晋蒙辽吉黑沪苏浙皖闽赣鲁豫鄂湘粤桂琼渝川黔贵云滇藏陕甘青宁新港澳台QWERTYUIOPASDFGHJKLZXCVBNM0123456789"
        android:hint="@string/truck_add_truck_hint_0"
        android:inputType="textFilter"
        android:maxLength="7"
        android:textColor="@color/color_text_grey"
        android:textColorHint="@color/font_grey"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintLeft_toRightOf="@id/tv_truck_number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_truck_number"
        app:layout_constraintTop_toTopOf="@id/tv_truck_number"
        tools:ignore="TextFields"/>

    <TextView
        android:id="@+id/tv_truck_freamNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:gravity="center_vertical|end"
        android:padding="10dp"
        android:text="@string/truck_add_truck_fream_num"
        android:textColor="@color/black_333"
        android:textSize="@dimen/txt40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintRight_toLeftOf="@+id/et_truck_freamNumber"
        app:layout_constraintTop_toBottomOf="@id/et_truck_number"/>

    <EditText
        android:id="@+id/et_truck_freamNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/divider_line"
        android:background="@color/white"
        android:digits="ABCDEFGHJKLMNPRSTUVWXYZ0123456789"
        android:hint="@string/truck_add_truck_fream_hint_0"
        android:inputType="textFilter"
        android:maxLength="8"
        app:layout_constraintBottom_toBottomOf="@+id/tv_truck_freamNumber"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/color_text_grey"
        android:textColorHint="@color/font_grey"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintLeft_toRightOf="@id/tv_truck_number"
        app:layout_constraintTop_toTopOf="@id/tv_truck_freamNumber"
        tools:ignore="TextFields"/>


    <TextView
        android:id="@+id/tv_truck_type_hint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center_vertical|end"
        android:text="@string/truck_add_truck_type"
        android:textColor="@color/black_333"
        android:textSize="@dimen/txt40"
        app:layout_constraintBottom_toBottomOf="@+id/tv_truck_type"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_truck_type"
        app:layout_constraintTop_toTopOf="@+id/tv_truck_type"/>

    <TextView
        android:id="@+id/tv_truck_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/divider_line"
        android:background="@color/white"
        android:drawableEnd="@drawable/jiankong_arrow"
        android:drawablePadding="6dp"
        android:drawableRight="@drawable/jiankong_arrow"
        android:hint="@string/truck_add_truck_hint_1"
        android:onClick="onBtnClick"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:textColor="@color/color_text_grey"
        android:textColorHint="@color/font_grey"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintLeft_toRightOf="@id/tv_truck_type_hint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_truck_freamNumber"/>

    <TextView
        android:id="@+id/tv_truck_length_hint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center_vertical|end"
        android:text="@string/truck_add_truck_length"
        android:textColor="@color/black_333"
        android:textSize="@dimen/txt40"
        app:layout_constraintBottom_toBottomOf="@+id/tv_truck_length"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_truck_length"
        app:layout_constraintTop_toBottomOf="@+id/tv_truck_type_hint"
        app:layout_constraintTop_toTopOf="@+id/tv_truck_length"/>

    <TextView
        android:id="@+id/tv_truck_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/divider_line"
        android:background="@color/white"
        android:drawableEnd="@drawable/jiankong_arrow"
        android:drawablePadding="6dp"
        android:drawableRight="@drawable/jiankong_arrow"
        android:hint="@string/truck_add_truck_hint_2"
        android:onClick="onBtnClick"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:textColor="@color/color_text_grey"
        android:textColorHint="@color/font_grey"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintLeft_toRightOf="@+id/tv_truck_length_hint"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_truck_type"/>

    <TextView
        android:id="@+id/tv_truck_weight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center_vertical|end"
        android:text="@string/truck_add_truck_weight"
        android:textColor="@color/black_333"
        android:textSize="@dimen/txt40"
        app:layout_constraintBottom_toBottomOf="@+id/et_truck_weight"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/et_truck_weight"
        app:layout_constraintTop_toTopOf="@+id/et_truck_weight"/>

    <EditText
        android:id="@+id/et_truck_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/divider_line"
        android:background="@color/white"
        android:digits="0123456789."
        android:hint="@string/truck_add_truck_hint_3"
        android:inputType="number"
        android:maxLines="1"
        android:padding="10dp"
        android:textColor="@color/color_text_grey"
        android:textColorHint="@color/font_grey"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintHorizontal_weight="0.6"
        app:layout_constraintRight_toLeftOf="@+id/textView"
        app:layout_constraintLeft_toRightOf="@id/tv_truck_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_truck_length"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:text="@string/ton"
        android:textColor="@color/black_333"
        android:textSize="@dimen/txt40"
        app:layout_constraintBottom_toBottomOf="@+id/et_truck_weight"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_weight="0.1"
        app:layout_constraintLeft_toRightOf="@id/et_truck_weight"
        app:layout_constraintTop_toTopOf="@+id/et_truck_weight"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim90"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_blue"
        android:onClick="onBtnClick"
        android:text="@string/truck_push_my_truck"
        android:textColor="@color/white"
        android:textSize="@dimen/txt40"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>