<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/t"
        layout="@layout/view_titlebar"/>

    <TextView
        android:id="@+id/weiXiuLayout"
        style="@style/width_m_height_w"
        android:background="@drawable/selector_bg_divider"
        android:drawableEnd="@drawable/jiankong_arrow"
        android:drawablePadding="@dimen/length_8"
        android:drawableRight="@drawable/jiankong_arrow"
        android:gravity="center_vertical"
        android:padding="@dimen/length_13"
        android:text="@string/maintenance_service_point"
        android:textColor="@color/black_333"
        android:textSize="@dimen/textsize_14"
        app:layout_constraintTop_toBottomOf="@id/t"/>

    <TextView
        android:id="@+id/jiayouLayout"
        style="@style/width_m_height_w"
        android:background="@drawable/selector_bg_divider"
        android:drawableEnd="@drawable/jiankong_arrow"
        android:drawablePadding="@dimen/length_8"
        android:drawableRight="@drawable/jiankong_arrow"
        android:gravity="center_vertical"
        android:padding="@dimen/length_13"
        android:text="@string/refueling_stations"
        android:textColor="@color/black_333"
        android:textSize="@dimen/textsize_14"
        app:layout_constraintTop_toBottomOf="@id/weiXiuLayout"/>

    <TextView
        android:id="@+id/yuanQuLayout"
        style="@style/width_m_height_w"
        android:background="@drawable/selector_bg_divider"
        android:drawableEnd="@drawable/jiankong_arrow"
        android:drawablePadding="@dimen/length_8"
        android:drawableRight="@drawable/jiankong_arrow"
        android:gravity="center_vertical"
        android:padding="@dimen/length_13"
        android:text="@string/logistics_zone"
        android:textColor="@color/black_333"
        android:textSize="@dimen/textsize_14"
        app:layout_constraintTop_toBottomOf="@id/jiayouLayout"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bg_divider"
        android:clickable="false"
        android:drawablePadding="@dimen/length_8"
        android:padding="@dimen/length_13"
        android:text="@string/remote_diagnosis"
        android:textColor="@color/black_333"
        android:textSize="@dimen/textsize_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/r"
        app:layout_constraintTop_toBottomOf="@id/yuanQuLayout"/>

    <TextView
        android:id="@+id/r"
        style="@style/width_w_height_w"
        android:background="@drawable/selector_bg_divider"
        android:clickable="false"
        android:drawableEnd="@drawable/jiankong_arrow"
        android:drawablePadding="@dimen/length_8"
        android:drawableRight="@drawable/jiankong_arrow"
        android:padding="@dimen/length_13"
        android:text="@string/coming_soon"
        android:textColor="#999999"
        android:textSize="@dimen/textsize_14"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yuanQuLayout"/>
</android.support.constraint.ConstraintLayout>