<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="300dp"
              android:layout_height="wrap_content"
              android:background="@drawable/rb"
              android:orientation="vertical">

    <TextView
        style="@style/width_w_height_w"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/hint_add_vehicle"
        android:textColor="@color/color_text_0"
        android:textSize="@dimen/text_size_18"/>

    <LinearLayout
        style="@style/width_m_height_w"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_no"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:background="@drawable/btn_grey"
            android:onClick="onBtnClick"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"/>

        <Button
            android:id="@+id/btn_yes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_blue"
            android:onClick="onBtnClick"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"/>
    </LinearLayout>

</LinearLayout>