<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sc.clgg.activity.register.RegisterStartActivity">

    <include layout="@layout/view_titlebar"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:src="@mipmap/icon_step2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/enter_received_verification_code"
        android:textColor="@color/black"/>

    <LinearLayout
        style="@style/width_m_height_w"
        android:layout_margin="10dp"
        android:background="@drawable/txj_login_right_btn"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            style="@style/width_w_height_w"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@null"
            android:src="@drawable/phone"/>

        <EditText
            android:id="@+id/et_verification_code"
            style="@style/width_w_height_w"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_verification_code"
            android:maxLength="6"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/color_text_0"
            android:textColorHint="@color/grey_e4"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_get_verification_code"
            android:layout_width="70dp"
            android:layout_height="25dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_angle_blue"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/get_verification_code"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="SmallSp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_angle_red_50"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>
