<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.sc.clgg.widget.NotSlideViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:canSlide="false"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_e4"
        app:layout_constraintBottom_toTopOf="@+id/tv_truck_manage"
        app:layout_constraintTop_toBottomOf="@id/viewpager"/>

    <TextView
        android:id="@+id/tv_truck_manage"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:drawableTop="@drawable/selector_truck_manage"
        android:gravity="center"
        android:paddingTop="@dimen/length_8"
        android:text="@string/truck_manage"
        android:textColor="@color/selector_home_bottombar"
        android:textSize="@dimen/textsize_10"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_transport_manage"/>

    <TextView
        android:id="@+id/tv_transport_manage"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:drawableTop="@drawable/selector_transport_manage"
        android:gravity="center"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="@dimen/length_8"
        android:text="@string/transport_manage"
        android:textColor="@color/selector_home_bottombar"
        android:textSize="@dimen/textsize_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toRightOf="@id/tv_truck_manage"
        app:layout_constraintRight_toLeftOf="@+id/tv_user_setttings"/>

    <TextView
        android:id="@+id/tv_unread"
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:layout_constraintCircle="@id/tv_transport_manage"
        app:layout_constraintCircleAngle="45"
        app:layout_constraintCircleRadius="30dp"
        android:background="@drawable/red_heart_white_ring"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/number_0"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        tools:ignore="RtlHardcoded,SmallSp"/>


    <TextView
        android:id="@+id/tv_user_setttings"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:drawableTop="@drawable/selector_user_settings"
        android:gravity="center"
        android:paddingTop="@dimen/length_8"
        android:text="@string/user_setttings"
        android:textColor="@color/selector_home_bottombar"
        android:textSize="@dimen/textsize_10"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toRightOf="@id/tv_transport_manage"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>